test/libsolidity/syntaxTests/nameAndTypeResolution/513_library_function_without_implementation_private.sol
library L {
    function f() private;
}
// ----
// TypeError 9231: (16-37='function f() private;'): Library functions must be implemented if declared.
